# NoGo_AlphaZero

./: .gitignore  network.py  network_test.py  trajectory_socket.h  trajectory_socket.py
mcts/: CMakeLists.txt  actor.cpp  mcts_test.cc  self_play.cpp
mcts/game/: README.md  action.h  agent.h  alphazero_mcts.h  board.h  episode.h  makefile  mcts.h  nogo.cpp  self_play.cpp  self_play.h  statistic.h
mcts/game/model_provider/: alphazero_net.py  provider_test.py
mcts/mock/: mock_class.h
mcts/proto/: CMakeLists.txt  trajectory.pb.cc  trajectory.pb.h  trajectory.proto
mcts/socket/: trajectory_socket.cpp  trajectory_socket.h
train/: connect_test.py  learner.py  learner_config.yaml  network.py  replay_buffer.py  test_trajectory  train_test.py  trainer.py  trajectory_pb2.py  trajectory_socket.py
train/model_provider/: alphazero_net.py  provider_test.py
