# find_package(Protobuf REQUIRED)
# FILE(GLOB protofiles "${CMAKE_CURRENT_SOURCE_DIR}/*.proto")
# PROTOBUF_GENERATE_CPP(PROTOSRCS PROTOHDRS ${protofiles})
# add_library(proto STATIC ${PROTOSRCS} ${PROTOHDRS})
# target_link_libraries(proto protobuf)
# target_include_directories(proto PUBLIC ${CMAKE_CURRENT_BINARY_DIR})
protobuf_generate_cpp(PROTOSRCS PROTOHDRS trajectory.proto)
add_library(proto OBJECT ${PROTOSRCS})
target_link_libraries(proto protobuf)
